# hardcaml_riscv

./: .gitignore  README.md  cse469.opam  dune-project
docs/branch-prediction/: paper.typ  presentation.typ  refs.bib
hard/: .gitignore  README.md  cse469.opam  dune-project  install.sh
hard/arty/: .gitignore  Makefile  README.md  arty.ml  axi_uartlite_0.ml  cdc.ml  clk_wiz_0.ml  clocking_wizard.ml  command-reference.golden  dune  install.sh  reports.sh  top.ml  uart_wrapper.ml  upload.sh
hard/arty/ips/axi_uartlite_0/: axi_uartlite_0.xci
hard/arty/ips/clk_wiz_0/: clk_wiz_0.xci
hard/arty/scripts/: all.tcl  bitstream.tcl  build.tcl  place.tcl  reports.tcl  route.tcl  setup.tcl  synth.tcl
hard/cpu/: alu.ml  alu_control.ml  alu_utilities.ml  cpu.ml  decoder.ml  instruction.ml  memory_controller.ml  parameters.ml
hard/cpu/lib/: alu.ml  bootloader.ml  branch_prediction.ml  cache.ml  cpu.ml  debugging.ml  decoder.ml  dune  fast_fifo.ml  instruction.ml  memory_controller.ml  parameters.ml  pipeline.ml  register_file.ml  uart.ml
hard/cpu/test_binaries/: atoi.s  atoi.signals  branch_prediction.s  branch_prediction.signals  dependencies.s  dependencies.signals  dune  fibonacci.s  fibonacci.signals  instruction_tests.s  instruction_tests.signals  invalid.signals  sample.lds  sample_programs.ml  simple.s  simple.signals  strchr.s  strchr.signals  test.ml  uart_echo.output  uart_echo.s  uart_echo.signals
hard/lib/: alu.ml  alu_control.ml  cpu.ml  decoder.ml  instruction.ml  parameters.ml
lib/: cpu.ml  dune
soft/: Cargo.toml  boot.lds  dune
soft/.cargo/: config.toml
soft/bootloader/: Cargo.toml
soft/bootloader/src/: lib.rs
soft/bootloader_server/: Cargo.toml
soft/bootloader_server/src/: main.rs
soft/offchip/baud/: Cargo.toml
soft/offchip/baud/src/: main.rs
soft/offchip/bootloader_client/: Cargo.toml  hold_fd.py  real.sh  sim.sh
soft/offchip/bootloader_client/src/: main.rs
soft/offchip/tstp/: Cargo.toml
soft/offchip/tstp/src/: main.rs
soft/onchip/: Cargo.toml  dune  program.lds
soft/onchip/.cargo/: config.toml
soft/onchip/bootloader_server/: Cargo.toml  dune
soft/onchip/bootloader_server/src/: main.rs
soft/onchip/calculator/: Cargo.toml  calculator.output  dune
soft/onchip/calculator/src/: main.rs
soft/onchip/donut/: Cargo.toml  donut.output  dune
soft/onchip/donut/src/: main.rs
soft/onchip/fibonacci/: Cargo.toml  dune  fibonacci.output
soft/onchip/fibonacci/src/: main.rs
soft/onchip/pi/: Cargo.toml  dune  pi.output
soft/onchip/pi/src/: main.rs
soft/onchip/rng/: Cargo.toml  dune  rng.output
soft/onchip/rng/src/: main.rs
soft/onchip/slib/: Cargo.toml
soft/onchip/slib/src/: stdio.rs
soft/onchip/sort/: Cargo.toml  dune  sort.input  sort.output
soft/onchip/sort/src/: main.rs
soft/onchip/wc/: Cargo.toml  dune  wc.input  wc.output
soft/onchip/wc/src/: main.rs
soft/shared/: Cargo.toml
soft/shared/src/: lib.rs
soft/slib/: Cargo.toml
soft/slib/src/: lib.rs  stdio.rs
soft/src/: atoi.s  bubble_sort.s  fibonacci.s  main.rs  strchr.s  test_instructions.s
