[workspace]
members = [
    "bootloader",
    "offchip/baud",
    "offchip/bootloader_client",
    "onchip/bootloader_server",
    "onchip/slib",
]

[workspace.package]
edition = "2021"

[package]
name = "cse469"
version = "0.0.0"
publish = false

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dr]
inherits = "release"
debug = true
strip = false
