[workspace]
members = [
    "bootloader",
    "offchip/tstp",
    "offchip/bootloader_client",
    "shared",
    "slib",
]

[workspace.package]
edition = "2021"

[package]
name = "offchip"
version = "0.0.0"
publish = false

[dev-dependencies]
supercilex-tests = "0.3.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
