(executable
 (public_name arty)
 (promote (until-clean))
 (libraries cpu core_unix.command_unix core_unix.filename_unix)
 (preprocess
  (pps ppx_jane ppx_deriving_hardcaml)))

(rule
 (target command-reference.golden)
 (deps arty.exe)
 (mode promote)
 (alias runtest)
 (action
  (with-stdout-to
   %{target}
   (run %{deps} help -recursive -flags))))

(rule
 (target top.v)
 (deps arty.exe)
 (mode
  (promote (until-clean)))
 (alias runtest)
 (action
  (run %{deps} compile -output %{target})))

(rule
 (target top.bit)
 (deps
  (glob_files *.v)
  (source_tree boards)
  (source_tree ips)
  (source_tree scripts)
  (env_var BOARD))
 (mode
  (promote (until-clean)))
 (locks vivado)
 (action
  (progn
   (run chmod +rw -R boards ips)
   (run mkdir -p outputs)
   (run
    vivado
    -nojournal
    -mode
    batch
    -source
    scripts/bitstream.tcl
    -log
    outputs/bitstream.log
    -tclargs
    %{env:BOARD=}))))

(rule
 (targets
  bus_skew.rpt
  clock_utilization.rpt
  design_analysis.rpt
  drc.rpt
  high_fanout_nets.rpt
  methodology.rpt
  power.rpt
  qor_suggestions.rpt
  ram_utilization.rpt
  timing_summary.rpt
  utilization.rpt)
 (deps
  (glob_files *.v)
  (source_tree boards)
  (source_tree ips)
  (source_tree scripts)
  (env_var BOARD))
 (mode
  (promote
   (until-clean)
   (into reports)))
 (alias reports)
 (locks vivado)
 (action
  (progn
   (run chmod +rw -R boards ips)
   (run mkdir -p outputs)
   (run
    vivado
    -nojournal
    -mode
    batch
    -source
    scripts/reports.tcl
    -log
    outputs/reports.log
    -tclargs
    %{env:BOARD=}))))
