(executable
 (name test)
 (libraries cpu core_unix.command_unix)
 (preprocess
  (pps ppx_jane)))

(rule
 (target invalid.signals)
 (deps test.exe)
 (mode promote)
 (alias runtest)
 (action
  (with-outputs-to
   %{target}
   (run %{deps} -cycles 4 -program invalid))))

(rule
 (target simple.bin)
 (deps
  (:src simple.s)
  sample.lds)
 (action
  (progn
   (progn
    (run
     riscv64-linux-gnu-gcc
     -march=rv32i
     -mabi=ilp32
     -nostdlib
     -static
     -fno-pie
     -Tsample.lds
     %{src}
     -o
     simple)
    (run riscv64-linux-gnu-objcopy -O binary simple %{target})))))

(rule
 (target simple.signals)
 (deps test.exe)
 (mode promote)
 (alias runtest)
 (action
  (with-outputs-to
   %{target}
   (run %{deps} -cycles 34 -program simple))))

(rule
 (target strchr.bin)
 (deps
  (:src strchr.s)
  sample.lds)
 (action
  (progn
   (run
    riscv64-linux-gnu-gcc
    -march=rv32i
    -mabi=ilp32
    -nostdlib
    -static
    -fno-pie
    -Tsample.lds
    %{src}
    -o
    strchr)
   (run riscv64-linux-gnu-objcopy -O binary strchr %{target}))))

(rule
 (target strchr.signals)
 (deps test.exe)
 (mode promote)
 (alias runtest)
 (action
  (with-outputs-to
   %{target}
   (run %{deps} -cycles 206 -program string_search))))

(rule
 (target fibonacci.bin)
 (deps
  (:src fibonacci.s)
  sample.lds)
 (action
  (progn
   (run
    riscv64-linux-gnu-gcc
    -march=rv32i
    -mabi=ilp32
    -nostdlib
    -static
    -fno-pie
    -Tsample.lds
    %{src}
    -o
    fibonacci)
   (run riscv64-linux-gnu-objcopy -O binary fibonacci %{target}))))

(rule
 (target fibonacci.signals)
 (deps test.exe)
 (mode promote)
 (alias runtest)
 (action
  (with-outputs-to
   %{target}
   (run %{deps} -cycles 11145 -program fibonacci))))
