(executable
 (name test)
 (libraries cpu core_unix.command_unix)
 (preprocess
  (pps ppx_jane)))

(rule
 (target invalid.signals)
 (deps test.exe)
 (mode promote)
 (alias runtest)
 (action
  (with-outputs-to
   %{target}
   (run %{deps} -cycles 4 -program invalid))))

(rule
 (target simple.bin)
 (deps
  (:src simple.s)
  sample.lds)
 (action
  (progn
   (run
    riscv64-linux-gnu-gcc
    -march=rv32i
    -mabi=ilp32
    -nostdlib
    -static
    -fno-pie
    -Tsample.lds
    %{src}
    -o
    simple)
   (run riscv64-linux-gnu-objcopy -O binary simple %{target}))))

(rule
 (target simple.signals)
 (deps test.exe)
 (mode promote)
 (alias runtest)
 (action
  (with-outputs-to
   %{target}
   (run %{deps} -cycles 24 -program simple))))

(rule
 (target strchr.bin)
 (deps
  (:src strchr.s)
  sample.lds)
 (action
  (progn
   (run
    riscv64-linux-gnu-gcc
    -march=rv32i
    -mabi=ilp32
    -nostdlib
    -static
    -fno-pie
    -Tsample.lds
    %{src}
    -o
    strchr)
   (run riscv64-linux-gnu-objcopy -O binary strchr %{target}))))

(rule
 (target strchr.signals)
 (deps test.exe)
 (mode promote)
 (alias runtest)
 (action
  (with-outputs-to
   %{target}
   (run %{deps} -cycles 142 -program string_search))))

(rule
 (target fibonacci.bin)
 (deps
  (:src fibonacci.s)
  sample.lds)
 (action
  (progn
   (run
    riscv64-linux-gnu-gcc
    -march=rv32i
    -mabi=ilp32
    -nostdlib
    -static
    -fno-pie
    -Tsample.lds
    %{src}
    -o
    fibonacci)
   (run riscv64-linux-gnu-objcopy -O binary fibonacci %{target}))))

(rule
 (target fibonacci.signals)
 (deps test.exe)
 (mode promote)
 (alias runtest)
 (action
  (with-outputs-to
   %{target}
   (run %{deps} -cycles 7432 -program fibonacci))))

(rule
 (target atoi.bin)
 (deps
  (:src atoi.s)
  sample.lds)
 (action
  (progn
   (run
    riscv64-linux-gnu-gcc
    -march=rv32i
    -mabi=ilp32
    -nostdlib
    -static
    -fno-pie
    -Tsample.lds
    %{src}
    -o
    atoi)
   (run riscv64-linux-gnu-objcopy -O binary atoi %{target}))))

(rule
 (target atoi.signals)
 (deps test.exe)
 (mode promote)
 (alias runtest)
 (action
  (with-outputs-to
   %{target}
   (run %{deps} -cycles 254 -program atoi))))

(rule
 (target uart_echo.bin)
 (deps
  (:src uart_echo.s)
  sample.lds)
 (action
  (progn
   (run
    riscv64-linux-gnu-gcc
    -march=rv32i
    -mabi=ilp32
    -nostdlib
    -static
    -fno-pie
    -Tsample.lds
    %{src}
    -o
    uart_echo)
   (run riscv64-linux-gnu-objcopy -O binary uart_echo %{target}))))

(rule
 (target uart_echo.signals)
 (deps test.exe)
 (mode promote)
 (alias runtest)
 (action
  (with-outputs-to
   %{target}
   (run %{deps} -cycles 59 -program uart_echo -uart-data "0x42 0x00"))))
