(library
 (name sample_programs)
 (modules sample_programs)
 (libraries base core)
 (preprocess
  (pps ppx_jane ppx_blob))
 (preprocessor_deps
  (glob_files *.bin)))

(rule
 (target invalid.signals)
 (deps
  (:exe ../bin/cli.exe))
 (mode promote)
 (alias runtest)
 (action
  (with-outputs-to
   %{target}
   (run %{exe} sim -cycles 4 -program "(sample invalid)"))))

(rule
 (target simple.bin)
 (deps
  (:src simple.s)
  sample.lds)
 (action
  (progn
   (run
    riscv64-linux-gnu-gcc
    -march=rv32i
    -mabi=ilp32
    -nostdlib
    -static
    -fno-pie
    -Tsample.lds
    %{src}
    -o
    simple)
   (run riscv64-linux-gnu-objcopy -O binary simple %{target}))))

(rule
 (target simple.signals)
 (deps
  (:exe ../bin/cli.exe))
 (mode promote)
 (alias runtest)
 (action
  (with-outputs-to
   %{target}
   (run %{exe} sim -cycles 24 -program "(sample simple)"))))

(rule
 (target strchr.bin)
 (deps
  (:src strchr.s)
  sample.lds)
 (action
  (progn
   (run
    riscv64-linux-gnu-gcc
    -march=rv32i
    -mabi=ilp32
    -nostdlib
    -static
    -fno-pie
    -Tsample.lds
    %{src}
    -o
    strchr)
   (run riscv64-linux-gnu-objcopy -O binary strchr %{target}))))

(rule
 (target strchr.signals)
 (deps
  (:exe ../bin/cli.exe))
 (mode promote)
 (alias runtest)
 (action
  (with-outputs-to
   %{target}
   (run %{exe} sim -cycles 142 -program "(sample string_search)"))))

(rule
 (target fibonacci.bin)
 (deps
  (:src fibonacci.s)
  sample.lds)
 (action
  (progn
   (run
    riscv64-linux-gnu-gcc
    -march=rv32i
    -mabi=ilp32
    -nostdlib
    -static
    -fno-pie
    -Tsample.lds
    %{src}
    -o
    fibonacci)
   (run riscv64-linux-gnu-objcopy -O binary fibonacci %{target}))))

(rule
 (target fibonacci.signals)
 (deps
  (:exe ../bin/cli.exe))
 (mode promote)
 (alias runtest)
 (action
  (with-outputs-to
   %{target}
   (run %{exe} sim -cycles 7432 -program "(sample fibonacci)"))))

(rule
 (target atoi.bin)
 (deps
  (:src atoi.s)
  sample.lds)
 (action
  (progn
   (run
    riscv64-linux-gnu-gcc
    -march=rv32i
    -mabi=ilp32
    -nostdlib
    -static
    -fno-pie
    -Tsample.lds
    %{src}
    -o
    atoi)
   (run riscv64-linux-gnu-objcopy -O binary atoi %{target}))))

(rule
 (target atoi.signals)
 (deps
  (:exe ../bin/cli.exe))
 (mode promote)
 (alias runtest)
 (action
  (with-outputs-to
   %{target}
   (run %{exe} sim -cycles 254 -program "(sample atoi)"))))

(rule
 (target uart_echo.bin)
 (deps
  (:src uart_echo.s)
  sample.lds)
 (action
  (progn
   (run
    riscv64-linux-gnu-gcc
    -march=rv32i
    -mabi=ilp32
    -nostdlib
    -static
    -fno-pie
    -Tsample.lds
    %{src}
    -o
    uart_echo)
   (run riscv64-linux-gnu-objcopy -O binary uart_echo %{target}))))

(rule
 (targets uart_echo.signals uart_echo.output)
 (deps
  (:exe ../bin/cli.exe)
  (:input uart_echo.input))
 (mode promote)
 (alias runtest)
 (action
  (with-outputs-to
   uart_echo.signals
   (run
    %{exe}
    sim
    -cycles
    59
    -program
    "(sample uart_echo)"
    -input-data-file
    %{input}
    -output-data-file
    uart_echo.output))))

(rule
 (target instruction_tests.bin)
 (deps
  (:src instruction_tests.s)
  sample.lds)
 (action
  (progn
   (run
    riscv64-linux-gnu-gcc
    -march=rv32i
    -mabi=ilp32
    -nostdlib
    -static
    -fno-pie
    -Tsample.lds
    %{src}
    -o
    instruction_tests)
   (run riscv64-linux-gnu-objcopy -O binary instruction_tests %{target}))))

(rule
 (target instruction_tests.signals)
 (deps
  (:exe ../bin/cli.exe))
 (mode promote)
 (alias runtest)
 (action
  (with-outputs-to
   %{target}
   (run %{exe} sim -cycles 160 -program "(sample instruction_tests)"))))
