[package]
name = "baud"
version = "0.1.0"
edition.workspace = true
description = "A simple terminal baud rate changer"
license = "Apache-2.0"
repository = "https://github.com/SUPERCILEX/hardcaml-riscv"
keywords = ["baud", "rate", "change", "terminal", "serial", "port", "tty", "speed"]
categories = ["command-line-utilities"]

[dependencies]
clap2 = { version = "4.0.32", features = ["derive", "wrap_help"] }
# TODO use release version
rustix = { version = "0.37.0-alpha.0", features = ["termios"], path = "/home/asaveau/Desktop/rustix" }
