[package]
name = "tstp"
version = "0.1.0"
edition.workspace = true
description = "A simple terminal baud rate changer"
license = "Apache-2.0"
repository = "https://github.com/SUPERCILEX/hardcaml-riscv"
keywords = ["baud", "rate", "change", "terminal", "serial", "port", "tty", "speed"]
categories = ["command-line-utilities"]

[dependencies]
clap2 = { version = "4.1.8", features = ["derive", "wrap_help"] }
rustix = { version = "0.37.0", features = ["termios"] }
