(rule
 (target rng.bin)
 (deps
  (file ../program.lds)
  (glob_files Cargo.*)
  (source_tree ../../shared)
  (source_tree ../../slib)
  (source_tree ../.cargo)
  (source_tree src))
 (mode
  (promote (until-clean)))
 (alias bin)
 (locks cargo)
 (action
  (progn
   (run mkdir -p target)
   (run chmod +rw -R target)
   (run cargo clean)
   (run cargo build --release)
   (run
    riscv64-linux-gnu-objcopy
    -O
    binary
    target/riscv32i-unknown-none-elf/release/rng
    %{target}))))

(rule
 (target rng-test.bin)
 (deps
  (file ../boot.lds)
  (glob_files Cargo.*)
  (source_tree ../../shared)
  (source_tree ../../slib)
  (source_tree ../.cargo)
  (source_tree src))
 (mode
  (promote (until-clean)))
 (alias bin)
 (locks cargo)
 (action
  (progn
   (run mkdir -p target)
   (run chmod +rw -R target)
   (run cargo clean)
   (run cargo rustc --release -- -Clink-arg=-T../boot.lds --cfg test)
   (run
    riscv64-linux-gnu-objcopy
    -O
    binary
    target/riscv32i-unknown-none-elf/release/rng
    %{target}))))

(rule
 (target rng.output)
 (deps
  (:exe ../../../hard/cpu/bin/cli.exe)
  (:bin rng-test.bin))
 (mode promote)
 (alias runtest)
 (action
  (run
   %{exe}
   execute
   -program
   "custom"
   -binary
   %{bin}
   -output-data-file
   %{target})))
